@startuml Class_Diagram_Sprint2
' Sprint 2 — Cadeaux promotionnels (persistance + moteur de règles)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 8
skinparam packageStyle rectangle

title Diagramme de classes — Sprint 2 (cadeaux & moteur de règles)

package "Commande (Sprint 1)" #FFF8E1 {
  class Order {
    + Id : int
    + CustomerId : int
    + TotalAmount : decimal
    + Status : string
    + PromotionCode : string?
    --
    + OrderGifts : ICollection<OrderGift>
  }

  class Customer {
    + Id : int
    + Name : string
    + Email : string
  }
}

package "Promotions (persistance)" #FCE4EC {
  enum GiftRuleType {
    Amount = 0
    Loyalty = 1
    Promotion = 2
  }

  class Gift {
    + Id : int <<PK>>
    + Name : string
    + Description : string
    + StockQuantity : int
    --
    + GiftRules : ICollection<GiftRule>
    + OrderGifts : ICollection<OrderGift>
  }

  class GiftRule {
    + Id : int <<PK>>
    + RuleType : GiftRuleType
    + ConditionValue : string
    + GiftId : int <<FK>>
    + IsActive : bool
    + Priority : int
    --
    + Gift : Gift?
  }

  class OrderGift {
    + Id : int <<PK>>
    + OrderId : int <<FK>>
    + GiftId : int <<FK>>
    + GiftRuleId : int <<FK>>
    + Quantity : int
    --
    + Order : Order?
    + Gift : Gift?
    + GiftRule : GiftRule?
  }
}

package "Moteur de règles (application)" #FFECB3 {
  interface IGiftRule {
    + IsSatisfied(context) : bool
    + GiftRuleId : int
    + GiftId : int
  }

  class AmountBasedGiftRule {
    + IsSatisfied(context) : bool
  }

  class LoyaltyGiftRule {
    + IsSatisfied(context) : bool
  }

  class PromotionGiftRule {
    + IsSatisfied(context) : bool
  }

  class GiftRuleEvaluationContext {
    + Order : Order
    + Customer : Customer
    + PriorCompletedOrderCount : int
    + PromotionCode : string?
  }

  class GiftRuleFactory {
    + CreateRule(ruleType) : IGiftRule
  }

  class GiftAssignmentService {
    + EvaluateAsync(context) : IReadOnlyList<GiftRuleApplication>
  }

  class GiftRuleApplication {
    + GiftRuleId : int
    + GiftId : int
    + GiftName : string
  }
}

Gift "1" o-- "0..*" GiftRule
GiftRule --> GiftRuleType
Order "1" o-- "0..*" OrderGift
Gift "1" <-- "0..*" OrderGift
GiftRule "1" <-- "0..*" OrderGift

IGiftRule <|.. AmountBasedGiftRule
IGiftRule <|.. LoyaltyGiftRule
IGiftRule <|.. PromotionGiftRule
GiftRuleFactory ..> IGiftRule : crée
GiftAssignmentService --> GiftRuleFactory
GiftAssignmentService ..> GiftRuleEvaluationContext : utilise
GiftAssignmentService ..> IGiftRule : évalue

note right of GiftAssignmentService
  Appelé depuis **OrderService**
  lors de ConfirmPayment / PayOrder
  (pas à la création Pending).
end note

note bottom of GiftRule
  Exemples seed :
  • Amount > 100
  • Loyalty (2e commande+)
  • Promotion code SPRINT2
end note

@enduml
